--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
